<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

  >

    <RelativeLayout
        android:id="@+id/relativeLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <SurfaceView
            android:id="@+id/colorSwatch"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="false"
            android:background="#000000" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="26dp"
            android:layout_toStartOf="@+id/colorSwatch"
            android:text="@string/send"
            tools:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"

        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:progress="00" />

            <SeekBar
                android:id="@+id/seekBar_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:progress="0" />

            <SeekBar
                android:id="@+id/seekBar_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="15dp"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/colorR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/blank_border"
                android:padding="10dp"
                android:text="@string/colorR_value" />

            <TextView
                android:id="@+id/colorG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/blank_border"
                android:padding="10dp"
                android:text="@string/colorB_value" />

            <TextView
                android:id="@+id/colorB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@drawable/blank_border"
                android:padding="10dp"
                android:text="@string/colorB_value" />
        </LinearLayout>


    </LinearLayout>

    <EditText
        android:id="@+id/colorEditText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#072D35"
        android:backgroundTintMode="src_in"

        android:fontFamily="monospace"
        android:hint="Enter color name."
        android:isScrollContainer="false"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.07999998">

    </EditText>

    <fragment
        android:id="@+id/color_frag"
        android:name="com.cs_3013.android.colorfinder.ColorListFragment"
        android:layout_width="374dp"
        android:layout_height="217dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorEditText"
        app:layout_constraintVertical_bias="1.0"></fragment>

</androidx.constraintlayout.widget.ConstraintLayout>